fix: card layout and spacing

--- a/frontend/frontend/src/components/Profile/Profile.css
+++ b/frontend/frontend/src/components/Profile/Profile.css
@@ -6,7 +6,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 1px solid blue;
     padding: 1em;
 }
 
@@ -14,7 +13,7 @@
    display: flex;
    gap: 1rem;
    justify-content: space-between;
-   border: 1px solid blue;
+
    
 
 }
@@ -24,7 +23,8 @@
     text-align: left;
     display: flex;
     flex-direction: column;
-    padding: min(1.5vw, 1.5rem) min(1.5vw, 1.5rem);
+    padding: 1em;
+    
 
 }
 
@@ -149,11 +149,14 @@ hr {
         flex-direction: column-reverse;
         gap: 1rem;
         justify-content: left;
+        align-items: left;
     }
 
     .mary-louise-image-wrapper {
-        min-width: 70%;
-        align-self: center;
+        /* min-width: 70%; */
+        align-self: left;
+        justify-self: left;
+        max-width: 300px;
     }
 
     .header-texts {
